# mescal

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: python-package-deploy.yml  python-test.yml
dev/: EF 3.1 regionalized.ipynb  add_CPC_categories.ipynb  basic_ES_files.ipynb  carculator.ipynb  double_counting.ipynb  download_impact_world_plus.ipynb  esm_back_to_lca.ipynb  impact_assessment.ipynb  import_premise_db.ipynb  input_data_for_doc.ipynb  mapping_ecoinvent_version.ipynb  mapping_operations.ipynb  normalization.ipynb  plot.ipynb
dev/IW+/: impact_abbrev.csv  impact_world_plus_201_brightway2_footprint_version.65d924f7a164e454e0e98120f3b6841d.bw2package
dev/contribution_analysis_app/: streamlit_app.py  tutorial_contribution_analysis.ipynb
dev/data/: mapping_product_to_CPC.csv  premise_change_report.csv
dev/ef regionalized/: EF 3.1 regionalized.ipynb  RER CF for land use and water use.ipynb  RER CF for land use.ipynb
dev/energyscope_data/: lifetime.csv  mapping.csv  mapping_QC.csv  mapping_QC_linked.csv  mapping_esm_flows_to_CPC.csv  mapping_linked.csv  model.csv  new_end_use_types.csv  results_ES.csv  technologies_to_remove_from_layers.csv  technology_compositions.csv  technology_specifics.csv  unit_conversion.csv
dev/lcia/: EF31_biosphere_mapping.csv  impact_abbrev.csv  impact_world_plus_21_brightway2_expert_version_ei38.e1d0c89de5923bf1ba70afabc43915e0.bw2package  (+3 more)
docs/: conf.py  environment.yaml  index.md
docs/_static/: mapping_energyscope.csv  mapping_generic.csv  (+5 more)
examples/: energyscope.ipynb  energyscope_CH.ipynb  streamlit_app.py  tutorial.ipynb  tutorial_contribution_analysis.ipynb  tutorial_pathway.ipynb
mescal/: CPC.py  __init__.py  adapt_efficiency.py  caching.py  change_ecoinvent.py  contribution_analysis.py  database.py  decommission.py  double_counting.py  esm.py  esm_back_to_lca.py  esm_database.py  filesystem_constants.py  generate_lcia_obj_ampl.py  impact_assessment.py  link_to_premise.py  location_selection.py  modify_inventory.py  normalization.py  plot.py  regionalization.py  utils.py
testing/: impact_scores_reg.csv  unit_conversion.csv
tests/: __init__.py  conftest.py  test_adapt_efficiency.py  test_database.py  test_double_counting.py  test_esm_back_to_lca.py  test_impact_assessment.py  test_impact_assessment.xlsx  test_location_selection.py  test_modify_inventory.py  test_normalization.py  test_regionalization.py  test_utils.py
(+89 files in other folders)
